add_executable(ElasticWave elastic_wave.cpp)
target_link_libraries(ElasticWave LINK_PUBLIC CabanaPD)

add_executable(KalthoffWinkler kalthoff_winkler.cpp)
target_link_libraries(KalthoffWinkler LINK_PUBLIC CabanaPD)

add_executable(CrackBranching crack_branching.cpp)
target_link_libraries(CrackBranching LINK_PUBLIC CabanaPD)

add_executable(FragmentingCylinder fragmenting_cylinder.cpp)
target_link_libraries(FragmentingCylinder LINK_PUBLIC CabanaPD)

add_executable(RandomCracks random_cracks.cpp)
target_link_libraries(RandomCracks LINK_PUBLIC CabanaPD)

add_executable(DogboneTensileTest dogbone_tensile_test.cpp)
target_link_libraries(DogboneTensileTest LINK_PUBLIC CabanaPD)

add_executable(DogboneTensileTestSeed dogbone_tensile_test_Seed.cpp)
target_link_libraries(DogboneTensileTestSeed LINK_PUBLIC CabanaPD)

add_executable(VNotchedBeamTestSeed v_notched_beam_test_Seed.cpp)
target_link_libraries(VNotchedBeamTestSeed LINK_PUBLIC CabanaPD)

install(TARGETS ElasticWave KalthoffWinkler CrackBranching FragmentingCylinder RandomCracks DogboneTensileTest DogboneTensileTestSeed VNotchedBeamTestSeed DESTINATION ${CMAKE_INSTALL_BINDIR})
